--- a/themes/story/static/css/story.css
+++ b/themes/story/static/css/story.css
@@ -417,4 +417,5 @@ img[src~="3dbook"] {
 .hljs-link {
   text-decoration: underline;
 }
-a.headline-hash {opacity: 40%; text-decoration: none;}
+a.headline-hash {opacity: 20%; text-decoration: none; font-size:80%; transition: opacity 0.5s;}
+a.headline-hash:hover {opacity: 100%; font-size:100%;}
