--- a/themes/story/static/css/story.css
+++ b/themes/story/static/css/story.css
@@ -33,11 +33,11 @@ blockquote {
   border-left: 0.25rem solid #dfe2e5;
 }
 pre {
-  border: 1px solid #dfe2e5;
+  /* border: 1px solid #dfe2e5; */
   border-radius: 3px;
-  font-size: 75%;
+  /* font-size: 75%; */
   line-height: 1.4;
-  padding: 1em;
+  /* padding: 1em; */
   background: #f6f8fa;
   overflow: auto;
 }
@@ -147,11 +147,11 @@ body:not(.feature-tablefig) table tr:nth-child(2n) {
   background-color: #f6f8fa;
 }
 body:not(.feature-tablefig) table th,
-body:not(.feature-tablefig) table td {
+body:not(.feature-tablefig, .linenotable) table td {
   display: table-cell;
   vertical-align: inherit;
   padding: 0.25rem 0.5rem;
-  border: 1px solid #dfe2e5;
+  /*border: 1px solid #dfe2e5;*/
 }
 body:not(.feature-tablefig) table th {
   font-weight: 600;
@@ -159,7 +159,7 @@ body:not(.feature-tablefig) table th {
 body.feature-tablefw:not(.feature-tablefig) td {
   font-family: arial;
 }
-body.feature-tablefig:not(.feature-notablefig) table {
+body.feature-tablefig:not(.feature-notablefig, .linenotable) table {
   border-spacing: 0;
   border-collapse: collapse;
   overflow: auto;
@@ -168,7 +168,7 @@ body.feature-tablefig:not(.feature-notablefig) table {
   border-top: 2px solid black;
 }
 body.feature-tablefig:not(.feature-notablefig) table thead,
-body.feature-tablefig:not(.feature-notablefig) table tbody {
+body.feature-tablefig:not(.feature-notablefig, .linenotable) table tbody {
   border-bottom: 1px solid black;
 }
 body.feature-tablefig:not(.feature-notablefig) table th,
@@ -419,3 +419,44 @@ img[src~="3dbook"] {
 }
 a.headline-hash {opacity: 20%; text-decoration: none; font-size:80%; transition: opacity 0.5s;}
 a.headline-hash:hover {opacity: 100%; font-size:100%;}
+pre.lineno {
+    color:rgba(139, 0, 0, 0.4);
+}
+
+pre, code {
+font-family: Consolas,monaco,monospace !important;
+
+font-size:14px !important;
+}
+
+.listingblock .title {
+  color: darkred;
+  font-style: italic;
+  display: block;
+  border-bottom: 1px solid darkred;
+  width: 100%;
+  text-align: right;
+}
+
+.conum[data-value] *{color:#fff!important}
+.conum[data-value]+b{display:none}
+.conum[data-value]::after{content:attr(data-value)}
+pre .conum[data-value]{position:relative;top:-.125em}
+b.conum *{color:inherit!important}
+.conum:not([data-value]):empty{display:none}
+
+
+.conum[data-value] {
+    display: inline-block;
+    color: #fff!important;
+    background: rgba(139,0,0,.4);
+    border-radius: 50%;
+    text-align: center;
+    font-size: .75em;
+    width: 1.67em;
+    height: 1.67em;
+    line-height: 1.67em;
+    font-family: "Open Sans","DejaVu Sans",sans-serif;
+    font-style: normal;
+    font-weight: bold;
+}
