Add copy icon to code blocks

--- a/themes/story/static/css/story.css
+++ b/themes/story/static/css/story.css
@@ -520,3 +520,24 @@ pre {
     border-radius: 3px;
     padding: 1em;
 }
+
+.rouge.highlight {
+  position: relative;
+}
+
+.copy-button {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  background: rgba(0,0,0,0.3);
+  border: none;
+  border-radius: 4px;
+  padding: 4px;
+  color: white;
+  cursor: pointer;
+  transition: all 0.2s ease;
+}
+
+.copy-button:hover {
+  background: rgba(0,0,0,0.5);
+}
