--- a/themes/story/layouts/_default/baseof.html
+++ b/themes/story/layouts/_default/baseof.html
@@ -7,10 +7,13 @@
 		<title>{{ block "title" . }}{{ .Site.Title }}{{ end }}</title>
 		<link rel="alternate" type="application/rss+xml" title="RSS" href="{{ "index.xml" | absURL }}">
 		<link rel="canonical" href="{{ .Permalink }}">
+		{{ if (findRE "class=\"rouge highlight\"" .Content 1) }}
+		<script src="/js/copy-code.js"></script>
+		{{ end }}
 		<!-- the Story logo is a square with rounded corners interlocked with a section symbol in Bodoni 72 Book font -->
 		{{ with .Description }}<meta name="description" content="{{. | markdownify }}">{{ end }}
 		{{ with .Keywords }}<meta name="keywords" content="{{.}}">{{ end }}
-		
+
 		{{ block "social" . }}
 		{{ end }}
 
