Flink changelog/joins, update theme for callouts/annotations

--- a/themes/story/static/css/story.css
+++ b/themes/story/static/css/story.css
@@ -446,8 +446,8 @@ b.conum *{color:inherit!important}
 
 .conum[data-value] {
     display: inline-block;
-    color: #fff!important;
-    background: rgba(139,0,0,.4);
+    color: #000000!important;
+    background: rgba(187, 255, 0, 0.8);
     border-radius: 50%;
     text-align: center;
     font-size: .75em;
@@ -540,4 +540,26 @@ pre {
 
 .copy-button:hover {
   background: rgba(0,0,0,0.5);
+}
+
+.admonitionblock.tip .title {
+  font-weight: bold;
+}
+
+/* AsciiDoctor*/
+table{border-collapse:collapse;border-spacing:0}
+.admonitionblock>table{border-collapse:separate;border:0;background:none;width:100%}
+.admonitionblock>table td.icon{text-align:center;width:80px}
+.admonitionblock>table td.icon img{max-width:none}
+.admonitionblock>table td.icon .title{font-weight:bold;font-family:"Open Sans","DejaVu Sans",sans-serif;text-transform:uppercase}
+.admonitionblock>table td.content{padding-left:1.125em;padding-right:1.25em;border-left:1px solid #ddddd8;color:rgba(0,0,0,.6)}
+.admonitionblock>table td.content>:last-child>:last-child{margin-bottom:0}
+.admonitionblock td.icon [class^="fa icon-"]{font-size:2em;text-shadow:1px 1px 2px rgba(0,0,0,.3);cursor:default}
+.admonitionblock td.icon .icon-note::before{content:"\f05a";color:#19407c}
+.admonitionblock td.icon .icon-tip::before{content:"\f0eb";color:rgba(112, 181, 9, 0.74)}
+.admonitionblock td.icon .icon-warning::before{content:"\f071";color:#ffb700}
+.admonitionblock td.icon .icon-caution::before{content:"\f06d";color:#bf3400}
+.admonitionblock td.icon .icon-important::before{content:"\f06a";color:#bf0000}
+.admonitionblock.tip .title {
+    font-weight: bold;
 }
