Add table of contents functionality to Hugo theme and AsciiDoc defaults

--- a/themes/story/layouts/_default/single.html
+++ b/themes/story/layouts/_default/single.html
@@ -2,6 +2,12 @@
 
 {{ define "main" }}
 <article class="center bg-white br-3 pv1 ph4 lh-copy f5 nested-links mw8">
+	{{ if .TableOfContents }}
+	<div class="toc ba b--light-gray pa3 br2 mb4">
+		<h2 class="f4 fw4 mt0">Table of Contents</h2>
+		{{ .TableOfContents }}
+	</div>
+	{{ end }}
 	{{ .Content | replaceRE "(<h[2-9] id=\"([^\"]+)\".+)(</h[2-9]+>)" "${1}&nbsp;<a class=\"headline-hash\" href=\"#${2}\">🔗</a> ${3}" | safeHTML }}
 </article>
 {{ end }}
