--- a/themes/story/static/css/story.css
+++ b/themes/story/static/css/story.css
@@ -546,6 +546,36 @@ pre {
   font-weight: bold;
 }
 
+/* Table of Contents Styles */
+.toc {
+  background-color: #f6f8fa;
+}
+
+.toc h2 {
+  margin-top: 0;
+  border-bottom: 1px solid #dfe2e5;
+  padding-bottom: 0.5rem;
+}
+
+.toc ul {
+  padding-left: 1.5rem;
+  margin-bottom: 0;
+}
+
+.toc li {
+  font-family: 'Quattrocento Sans', -apple-system, BlinkMacSystemFont, 'avenir next', avenir, 'helvetica neue', helvetica, ubuntu, roboto, noto, 'segoe ui', arial, sans-serif;
+  margin-bottom: 0.25rem;
+}
+
+.toc a {
+  color: #24292e;
+  text-decoration: none;
+}
+
+.toc a:hover {
+  text-decoration: underline;
+}
+
 /* AsciiDoctor*/
 table{border-collapse:collapse;border-spacing:0}
 .admonitionblock>table{border-collapse:separate;border:0;background:none;width:100%}
