--- a/themes/story/static/css/toc.css
+++ b/themes/story/static/css/toc.css
@@ -1,29 +1,101 @@
+/* Container and Grid Layout */
+.container-fluid {
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.docs-content {
+  padding: 0 1rem;
+}
+
 /* Table of Contents Styles */
-.toc {
-  background-color: #f6f8fa;
+.docs-toc {
+  position: sticky;
+  top: 5rem;
+  height: calc(100vh - 7rem);
+  overflow-y: auto;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+  font-size: 0.875rem;
 }
 
-.toc h2 {
-  margin-top: 0;
-  border-bottom: 1px solid #dfe2e5;
-  padding-bottom: 0.5rem;
+.toc-top {
+  padding-left: 0;
+  list-style: none;
 }
 
-.toc ul {
-  padding-left: 1.5rem;
-  margin-bottom: 0;
+.docs-toc-title {
+  display: block;
+  margin-bottom: 0.5rem;
+  font-weight: 600;
+  color: #222;
+  text-transform: uppercase;
+  font-size: 0.75rem;
+  letter-spacing: 0.1em;
 }
 
-.toc li {
-  font-family: 'Quattrocento Sans', -apple-system, BlinkMacSystemFont, 'avenir next', avenir, 'helvetica neue', helvetica, ubuntu, roboto, noto, 'segoe ui', arial, sans-serif;
+.docs-toc ul {
+  padding-left: 0;
+  list-style: none;
+}
+
+.docs-toc li {
   margin-bottom: 0.25rem;
 }
 
-.toc a {
-  color: #24292e;
+.docs-toc a {
+  color: #6c757d;
   text-decoration: none;
 }
 
-.toc a:hover {
-  text-decoration: underline;
+.docs-toc a:hover {
+  color: #000;
+  text-decoration: none;
+}
+
+.docs-toc a.active {
+  color: #000;
+  font-weight: 600;
+}
+
+/* Responsive Layout */
+@media (min-width: 1200px) {
+  .d-xl-block {
+    display: block !important;
+  }
+
+  .col-xl-2 {
+    flex: 0 0 16.666667%;
+    max-width: 16.666667%;
+  }
+
+  .col-xl-10 {
+    flex: 0 0 83.333333%;
+    max-width: 83.333333%;
+  }
+}
+
+@media (max-width: 1199.98px) {
+  .d-none {
+    display: none !important;
+  }
+
+  .col-md-1 {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+}
+
+/* Article Styling */
+.article {
+  padding: 1rem;
+  margin-bottom: 2rem;
+  font-size: 1rem;
+  line-height: 1.7;
 }
