--- a/themes/story/layouts/_default/list.html
+++ b/themes/story/layouts/_default/list.html
@@ -1,7 +1,7 @@
 {{ define "title" }}{{ .Section | title }} &bullet; {{ .Site.Title }}{{ end }}
 {{ define "main" }}
-<div class="pa3 pa4-ns w-100 w-70-ns center">
-  <section class="w-100 mw8">
+<div class="pa3 pa4-ns w-100 center" style="max-width: 1200px;">
+  <section class="w-100">
   <!-- list all talks; list non-future slides; else list things that are not future and not slides -->
   {{ $pages := where .Paginator.Pages ".Params.skip" "ne" "true" }}
   {{ if eq .Section "talks" }}
