--- a/themes/story/static/css/story.css
+++ b/themes/story/static/css/story.css
@@ -200,99 +200,94 @@ body.feature-fignum table caption::before {
   clear: both;
 }
 .feature-nosubtitle h2 {
-  display: none;
+  visibility: hidden;
 }
 .footnotes {
-  font-size: 80%;
+  font-size: smaller;
 }
 .math {
-  font-size: 1rem;
+  overflow-x: auto;
 }
 .about-the-author img {
+  width: 64px;
+  height: 64px;
+  padding: 1rem;
   float: left;
-  max-width: 100px;
-  border: 1px solid rgba(0, 0, 0, 0.3);
-  border-radius: 100%;
-  margin: 0 1rem 1rem 0;
+  border-radius: 50%;
 }
 blockquote.tweet {
-  border: 1px solid #dfe2e5;
-  border-radius: 5px;
-  padding: 4px 20px;
-  color: black;
+  position: relative;
+  background: #1da1f2;
+  border-radius: 3px;
 }
 .pagination li {
   display: inline-block;
 }
 .pagination li a {
-  padding: 0.5rem 0.625rem;
-  background-color: white;
-  color: #333;
-  border: 1px solid #ddd;
-  border-radius: 3px;
+  color: black;
+  float: left;
+  padding: 8px 16px;
   text-decoration: none;
+  border-radius: 5px;
 }
 .pagination li.disabled {
-  display: none;
+  pointer-events: none;
 }
 .pagination li.active a:link,
-.pagination li.active a:active,
 .pagination li.active a:visited {
-  background-color: #ddd;
+  background-color: #3e3e3e;
+  color: white;
 }
 img[src~="3dbook"] {
-  max-width: 120px;
+  box-shadow: 5px 5px 20px black;
 }
 @media screen {
   .book {
-    display: inline-block;
-    box-shadow: 5px 5px 20px #333;
-    margin: 1rem;
+    perspective: 200px;
+    height: 7.3rem;
+    width: 5.4rem;
+    margin: 0 auto;
   }
   .book img {
-    vertical-align: middle;
+    transform: rotateY(30deg);
+    box-shadow: 5px 5px 20px black;
   }
   .books {
-    -moz-perspective: 100px;
-    -moz-transform-style: preserve-3d;
-    -webkit-transform-style: preserve-3d;
-    display: inline-block;
-    float: right;
-    margin: 0px 0px 1rem 1rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-content: space-around;
+    align-items: space-around;
   }
+}
+@media print {
   .book {
-    position: relative;
-    -moz-perspective: 100px;
-    -moz-transform: rotateY(-3deg);
-    -webkit-transform: perspective(100) rotateY(-3deg);
-    outline: 1px solid transparent;
-    box-shadow: none;
-    margin: 0;
+    perspective: 200px;
+    height: 3.65rem;
+    width: 2.7rem;
+    margin: 0 auto;
   }
   .book img {
-    position: relative !important;
+    transform: rotateY(30deg);
+    box-shadow: 5px 5px 20px black;
   }
   .book:before,
   .book:after {
+    content: "";
     position: absolute;
-    top: 2%;
-    height: 96%;
-    content: ' ';
+    top: 1%;
+    height: 98%;
+    width: 100%;
+    background: #313131;
     z-index: -1;
   }
   .book:before {
-    width: 100%;
-    left: 6.5%;
-    background-color: #484848;
-    box-shadow: 0px 3px 20px 2px #333;
+    left: 8.5%;
+    transform: rotateY(30deg) translateZ(-2px);
   }
   .book:after {
-    width: 5%;
-    left: 100%;
-    background-color: #EFEFEF;
-    box-shadow: inset 0px 0px 5px #aaa;
-    -moz-transform: rotateY(20deg);
-    -webkit-transform: perspective(100) rotateY(20deg);
+    left: 8.5%;
+    transform: rotateY(30deg) translateZ(-4px);
   }
 }
 .display-print {
@@ -300,109 +295,100 @@ img[src~="3dbook"] {
 }
 @media print {
   * {
-    color: black !important;
+    background: transparent !important;
   }
   pre,
-  code {
-    font-size: 0.85rem;
-    background: white !important;
-    padding: 3px !important;
+  blockquote {
+    border: 1px solid #999;
+    page-break-inside: avoid;
   }
   img[src~="3dbook"] {
-    border: 1px solid black;
-    float: right;
-    margin: 0px 0px 1rem 1rem;
+    box-shadow: none;
+    max-width: 1cm;
+    max-height: 1.5cm;
   }
   .footnote-return {
     display: none;
   }
   a,
-  a:link,
-  a:visited,
-  a:hover {
-    text-decoration: underline black;
+  a:visited {
+    text-decoration: underline;
   }
   .footnote-ref a,
-  .category a {
-    text-decoration: none !important;
+  .footnote-ref a:link,
+  .footnote-ref a:visited {
+    text-decoration: none;
   }
   #hdr {
-    padding-top: 0px !important;
-    padding-bottom: 0px !important;
+    display: none;
   }
   h2 {
-    margin-top: 1rem !important;
-    margin-bottom: 1rem !important;
-    font-style: italic;
+    page-break-before: always;
   }
   h3 a:link,
   h3 a:visited {
     text-decoration: none;
   }
   .hide-print {
-    display: none !important;
+    display: none;
   }
   .display-print {
-    display: inline !important;
+    display: block;
   }
   .f4 {
-    font-size: 1rem !important;
+    font-size: .875rem;
   }
   .measure-wide {
-    max-width: 45em !important;
+    max-width: 34em;
   }
   main {
-    padding-bottom: 0 !important;
+    max-width: 100%;
   }
   .math {
-    font-size: 0.85rem !important;
+    overflow-x: visible;
   }
   article {
-    border-bottom-style: none !important;
+    max-width: 100%;
   }
 }
 .hljs {
   display: block;
-  color: #333333;
   overflow-x: auto;
+  background: #f3f3f3;
+  color: #444;
 }
 .hljs-comment,
-.hljs-meta {
-  color: #969896;
+.hljs-quote {
+  color: #697070;
 }
 .hljs-string,
-.hljs-variable,
-.hljs-template-variable,
-.hljs-strong,
-.hljs-emphasis,
-.hljs-quote {
-  color: #df5000;
+.hljs-literal,
+.hljs-number,
+.hljs-doctag {
+  color: #ff9900;
 }
 .hljs-keyword,
-.hljs-selector-tag,
-.hljs-type {
-  color: #a71d5d;
+.hljs-formula {
+  color: #333;
 }
 .hljs-literal,
-.hljs-symbol,
-.hljs-bullet,
-.hljs-attribute {
-  color: #0086b3;
+.hljs-number {
+  color: #880000;
 }
 .hljs-section,
 .hljs-name {
-  color: #63a35c;
+  color: #880000;
 }
 .hljs-tag {
-  color: #333333;
+  color: #880000;
 }
 .hljs-title,
 .hljs-attr,
-.hljs-selector-id,
-.hljs-selector-class,
-.hljs-selector-attr,
-.hljs-selector-pseudo {
-  color: #795da3;
+.hljs-attribute,
+.hljs-class .hljs-title,
+.hljs-template-tag,
+.hljs-template-variable {
+  color: #bc6060;
 }
 .hljs-addition {
   color: #55a532;
@@ -418,22 +404,26 @@ img[src~="3dbook"] {
 a.headline-hash {opacity: 20%; text-decoration: none; font-size:80%; transition: opacity 0.5s;}
 a.headline-hash:hover {opacity: 100%; font-size:100%;}
 pre.lineno {
-    color:rgba(139, 0, 0, 0.4);
+    width: 100%;
+    border: none;
 }
-
 pre, code {
-font-family: Consolas,monaco,monospace !important;
-
-font-size:14px !important;
+    font-family: 'Source Code Pro', 'Consolas', 'DejaVu Sans Mono', 'Ubuntu Mono', monospace;
+    font-size: 0.9rem;
+    line-height: 1.4;
+    white-space: pre-wrap;
 }
 
 .listingblock .title {
-  color: darkred;
-  font-style: italic;
-  display: block;
-  border-bottom: 1px solid darkred;
-  width: 100%;
-  text-align: right;
+    background: #f6f8fa;
+    border: 1px solid #dfe2e5;
+    border-bottom: 0;
+    color: #333;
+    font-family: 'Source Code Pro', 'Consolas', 'DejaVu Sans Mono', 'Ubuntu Mono', monospace;
+    font-size: 0.8rem;
+    font-weight: bold;
+    line-height: 1.5;
+    padding: 0.5rem 1rem;
 }
 
 .conum[data-value] *{color:#fff!important}
@@ -443,127 +433,127 @@ pre .conum[data-value]{position:relative;top:-.125em}
 b.conum *{color:inherit!important}
 .conum:not([data-value]):empty{display:none}
 
-
+/* Admonitions - AsciiDoc */
 .conum[data-value] {
-    display: inline-block;
-    color: #000000!important;
-    background: rgba(187, 255, 0, 0.8);
-    border-radius: 50%;
-    text-align: center;
-    font-size: .75em;
-    width: 1.67em;
-    height: 1.67em;
-    line-height: 1.67em;
-    font-family: "Open Sans","DejaVu Sans",sans-serif;
-    font-style: normal;
-    font-weight: bold;
+  display: inline-block;
+  color: #fff!important;
+  background: rgba(0,0,0,.8);
+  border-radius: 50%;
+  text-align: center;
+  font-size: .75em;
+  width: 1.67em;
+  height: 1.67em;
+  line-height: 1.67em;
+  font-family: "Open Sans","DejaVu Sans",sans-serif;
+  font-style: normal;
+  font-weight: bold
 }
 
-/* Base styling */
 .admonitionblock {
-  margin: 1.5rem 0;
+  margin: 1.4rem 0;
+  padding: 0;
+  border: solid 1px #d6d6d6;
   border-radius: 4px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15),
-              0 2px 4px rgba(0, 0, 0, 0.1);
-
-  background: #f8f9fa;
-  border-left: 4px solid;
-  border-right: 4px solid;
+  overflow: hidden;
+}
 
   table {
-    border-collapse: collapse;
+    border-collapse: separate;
+    border: 0;
+    background: none;
     width: 100%;
   }
 
   td.icon {
-    width: 40px;
-    vertical-align: top;
-    padding: 1rem 0 0 1rem;
+    text-align: center;
+    width: 80px;
+  }
 
     i {
-      font-size: 1.5rem;
+      font-style: normal;
+      font-weight: bold;
     }
-  }
 
   td.content {
-    padding: 1rem;
-    font-size: 1.1rem;
-    line-height: 1.6;
+    padding-left: 1.125em;
+    padding-right: 1.25em;
+    border-left: 1px solid #ddddd8;
+    color: rgba(0,0,0,.6);
   }
-}
 
-/* Type-specific styling */
-.admonitionblock.tip {
-  border-color: #00b4d8;
-  background: #e3f8ff;
+  &.tip {
+    border-color: rgba(112, 181, 9, 0.4);
+  }
 
   .icon i {
-    color: #00b4d8;
+    color: rgba(112, 181, 9, 0.74);
   }
-}
 
 div.imageblock div.title {
-  font-style: italic;
+  padding: 0px 0.5rem;
   text-align: center;
+  font-style: italic;
+  font-family: 'Spectral', Georgia, Times, serif;
 }
 
 img {
-  border: 1px solid #ddd;       /* Light frame/border */
-  border-radius: 4px;           /* Slightly rounded corners */
-  padding: 5px;                 /* Space between image and border */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);  /* Subtle drop shadow */
+  border-radius: 6px;
 }
 
-
+/* Code syntax highlighting */
 pre {
-    border: 1px solid #b21d82;
-    border-radius: 3px;
-    padding: 1em;
+  padding: 1em;
+  overflow: auto;
 }
 
 .rouge.highlight {
   position: relative;
+  padding-top: 1.5rem;
 }
 
 .copy-button {
   position: absolute;
-  top: 5px;
-  right: 5px;
-  background: rgba(0,0,0,0.3);
-  border: none;
-  border-radius: 4px;
-  padding: 4px;
-  color: white;
+  top: 0.25rem;
+  right: 0.25rem;
+  background-color: #f1f3f4;
+  color: #555;
+  border: 1px solid #ddd;
+  border-radius: 3px;
+  padding: 0.25rem 0.5rem;
+  font-size: 0.75rem;
   cursor: pointer;
-  transition: all 0.2s ease;
+  z-index: 1;
 }
 
 .copy-button:hover {
-  background: rgba(0,0,0,0.5);
+  background-color: #e8eaed;
+  color: #333;
 }
 
 .admonitionblock.tip .title {
-  font-weight: bold;
+    color: rgba(112, 181, 9, 0.74);
+    font-weight: bold;
 }
 
-/* Table of Contents Styles */
 .toc {
-  background-color: #f6f8fa;
+  background-color: #f8f9fa;
+  border-radius: 5px;
+  padding: 20px;
 }
 
 .toc h2 {
   margin-top: 0;
-  border-bottom: 1px solid #dfe2e5;
+  color: #333;
+  border-bottom: 1px solid #dee2e6;
   padding-bottom: 0.5rem;
 }
 
 .toc ul {
-  padding-left: 1.5rem;
-  margin-bottom: 0;
+  list-style: none;
+  padding-left: 0;
 }
 
 .toc li {
-  font-family: 'Quattrocento Sans', -apple-system, BlinkMacSystemFont, 'avenir next', avenir, 'helvetica neue', helvetica, ubuntu, roboto, noto, 'segoe ui', arial, sans-serif;
   margin-bottom: 0.25rem;
 }
 
