--- a/themes/story/layouts/index.html
+++ b/themes/story/layouts/index.html
@@ -1,8 +1,8 @@
 {{ define "main" }}
-	<div class="pa3 pa4-ns w-100 w-70-ns center">
-		<section class="w-100 mw8">
+	<div class="pa3 pa4-ns w-100 center" style="max-width: 1200px;">
+		<section class="w-100">
       {{ range where (where .Paginator.Pages ".Section" "ne" "slides") ".Params.skip" "ne" "true" }}
-      
+
 			{{ partial "li.html" . }}
 		{{ end }}
 		</section>
