--- a/themes/story/layouts/_default/baseof.html
+++ b/themes/story/layouts/_default/baseof.html
@@ -151,7 +151,11 @@
 			</p>
 		</footer>
 		{{ end }}
+	{{- if .Site.GoogleAnalytics -}}
+	{{- if templates.Exists "_internal/google_analytics_async.html" -}}
 	{{ template "_internal/google_analytics_async.html" . }}
+	{{- end -}}
+	{{- end -}}
 	{{ with .Site.Params.foot }}{{ range . }}
 	{{ . | safeHTML }}{{ end }}{{ end }}
 	</body>
