--- a/themes/story/layouts/_default/baseof.html
+++ b/themes/story/layouts/_default/baseof.html
@@ -26,6 +26,8 @@
 		{{ else }}
 		<link rel="stylesheet" href="{{ "css/story.css" | absURL }}" />
 		<link rel="stylesheet" href="{{ "css/descartes.css" | absURL }}" />
+		<link rel="stylesheet" href="{{ "css/toc.css" | absURL }}" />
+		<link rel="stylesheet" href="{{ "css/retro-cards.css" | absURL }}" />
 		{{ end }}
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 		<link href="https://fonts.googleapis.com/css?family=Quattrocento+Sans:400,400i,700,700i|Quattrocento:400,700|Spectral:400,400i,700,700i&amp;subset=latin-ext" rel="stylesheet">
@@ -58,6 +60,7 @@
 		{{ with .Site.Params.head }}{{ range . }}
 		{{ . | safeHTML }}{{ end }}{{ end }}
 		<script src="{{ "js/story.js" | absURL }}"></script>
+		<script src="{{ "js/toc.js" | absURL }}"></script>
 
 	</head>
 	<body class="ma0 bg-white {{ with .Section }}section-{{ . }}{{ end }} page-kind-{{ .Kind }} is-page-{{ .IsPage }} {{ with .Site.Params.classes }}{{ range . }} {{ . }}{{ end }}{{ end }}{{ with .Params.classes }}{{ range . }} {{ . }}{{ end }}{{ end }}">
@@ -90,7 +93,9 @@
 				</nav>
 
 				<div id="hdr" class="tc-l {{ cond $hdr "pv4-ns pv5-l" "" }} pv2 ph3 ph4-ns">
-					<h1 class="{{ cond $hdr "near-white mt1-ns" "" }} f2 fw3 mb0 mt0 lh-title">{{ cond (eq .Site.Params.titlecase true) (.Title | title | markdownify) (.Title | markdownify) }}</h1>
+					<h1 class="{{ cond $hdr "near-white mt1-ns" "" }} f2 fw3 mb0 mt0 lh-title">
+						<span class="terminal-title">{{ cond (eq .Site.Params.titlecase true) (.Title | title | markdownify) (.Title | markdownify) }}<span class="terminal-cursor"></span></span>
+					</h1>
 					<h2 class="{{ cond $hdr "near-white mt3-l mb4-l" "" }} fw1 f6 f3-l measure-wide-l center lh-copy mt2 mb3">
 						<!-- You can put a subtitle here in _index.md parameters, or it'll get
 						filled in with date and categories if it's a post -->
@@ -146,7 +151,11 @@
 			</p>
 		</footer>
 		{{ end }}
+	{{- if .Site.GoogleAnalytics -}}
+	{{- if templates.Exists "_internal/google_analytics_async.html" -}}
 	{{ template "_internal/google_analytics_async.html" . }}
+	{{- end -}}
+	{{- end -}}
 	{{ with .Site.Params.foot }}{{ range . }}
 	{{ . | safeHTML }}{{ end }}{{ end }}
 	</body>
